--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -5,40 +5,40 @@
 <!--[if gt IE 8]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
 <head>
     <link rel="shortcut icon" href="img/isbfavicon.ico" type="image/x-icon"/>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title>QED</title>
-  <meta name="viewport" content="width=device-width">
-  <link rel="stylesheet" href="css/app.css">
-  <script src="js/vendor.js"></script>
-  <script src="js/app.js"></script>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <title>Cancer Regulome</title>
+    <meta name="viewport" content="width=device-width">
+    <link rel="stylesheet" href="css/app.css">
+    <script src="js/vendor.js"></script>
+    <script src="js/isb.js"></script>
+    <script src="js/app.js"></script>
 </head>
 <body>
-  <div>
-    <div class="navbar navbar-fixed-top" id="navigation-container"></div>
-    <div class="container-fluid outer-container" id="mainDiv">
-  </div>
-  </div>
-  <script>require('initialize');</script>
+    <div>
+        <div class="navbar navbar-fixed-top" id="navigation-container"></div>
+        <div class="container-fluid outer-container" id="mainDiv"></div>
+    </div>
 
-  <!--these scripts are to support lightweight google hangout integration, should not affect how the app runs outside of hangout-->
-  <script src="//hangoutsapi.talkgadget.google.com/talkgadget/apps/gadgets/js/rpc.js"></script>
-  <script src="//hangoutsapi.talkgadget.google.com/hangouts/api/hangout.js?v=1.0"></script>
+    <script>require("initialize");</script>
 
-  <script type="text/javascript">
-      var _gaq = _gaq || [];
-      _gaq.push(['_setAccount', 'UA-22511346-2']);
-      _gaq.push(['_trackPageview']);
+    <!--these scripts are to support lightweight google hangout integration, should not affect how the app runs outside of hangout-->
+    <script src="//hangoutsapi.talkgadget.google.com/talkgadget/apps/gadgets/js/rpc.js"></script>
+    <script src="//hangoutsapi.talkgadget.google.com/hangouts/api/hangout.js?v=1.0"></script>
 
-      (function () {
-          var ga = document.createElement('script');
-          ga.type = 'text/javascript';
-          ga.async = true;
-          ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-          var s = document.getElementsByTagName('script')[0];
-          s.parentNode.insertBefore(ga, s);
-      })();
+    <script type="text/javascript">
+        var _gaq = _gaq || [];
+        _gaq.push(["_setAccount", "UA-22511346-2"]);
+        _gaq.push(["_trackPageview"]);
 
-  </script>
+        (function () {
+            var ga = document.createElement("script");
+            ga.type = "text/javascript";
+            ga.async = true;
+            ga.src = ("https:" == document.location.protocol ? "https://ssl" : "http://www") + ".google-analytics.com/ga.js";
+            var s = document.getElementsByTagName("script")[0];
+            s.parentNode.insertBefore(ga, s);
+        })();
+    </script>
 </body>
 </html>
