--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -4,15 +4,15 @@
 <!--[if IE 8]>    <html class="no-js lt-ie9" lang="en"> <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
 <head>
+    <title>Cancer Regulome</title>
     <link rel="shortcut icon" href="img/isbfavicon.ico" type="image/x-icon"/>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>Cancer Regulome</title>
     <meta name="viewport" content="width=device-width">
+
     <link rel="stylesheet" href="css/app.css">
-    <script src="js/vendor.js"></script>
-    <script src="js/isb.js"></script>
-    <script src="js/app.js"></script>
+    <script type="text/javascript" src="js/vendor.js"></script>
+    <script type="text/javascript" src="js/app.js"></script>
 </head>
 <body>
     <div>
