--- a/app/index.html
+++ b/app/index.html
@@ -10,12 +10,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width">
 
-    <link rel="stylesheet" href="css/app.css">
-    <script type="text/javascript" src="js/vendor.js"></script>
-    <script type="text/javascript" src="js/app.js"></script>
-    <script type="text/javascript">
-        require("initialize");
-    </script>
+    <!-- build:css css/app.css -->
+    <link rel="stylesheet" href="bower_components/visquick/assets/css/vq.css">
+    <link rel="stylesheet" href="bower_components/jquery-ui/themes/smoothness/jquery.ui.theme.css">
+    <link rel="stylesheet" href="bower_components/sass-bootstrap/bootstrap-2.3.2.css">
+    <!-- endbuild -->
+
+    <!-- build:js scripts/modernizr.js -->
+    <script src="bower_components/modernizr/modernizr.js"></script>
+    <!-- endbuild -->
 </head>
 <body>
     <div>
@@ -40,5 +43,9 @@
             s.parentNode.insertBefore(ga, s);
         })();
     </script>
+
+    <!-- build:js scripts/scripts.js -->
+    <script data-main="scripts/config" src="bower_components/requirejs/require.js"></script>
+    <!-- endbuild -->
 </body>
 </html>
