--- a/app/index.html
+++ b/app/index.html
@@ -10,10 +10,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width">
 
-    <!-- build:css css/app.css -->
+    <!-- build:css css/main.css -->
     <link rel="stylesheet" href="bower_components/visquick/assets/css/vq.css">
     <link rel="stylesheet" href="bower_components/jquery-ui/themes/smoothness/jquery.ui.theme.css">
-    <link rel="stylesheet" href="bower_components/sass-bootstrap/bootstrap-2.3.2.css">
+    <link rel="stylesheet" href="bower_components/bootstrap/css/bootstrap.css">
+    <link rel="stylesheet" href="css/app.css">
     <!-- endbuild -->
 
     <!-- build:js scripts/modernizr.js -->
@@ -25,24 +26,6 @@
         <div class="navbar navbar-fixed-top" id="navigation-container"></div>
         <div class="container-fluid outer-container" id="mainDiv"></div>
     </div>
-    <!--these scripts are to support lightweight google hangout integration, should not affect how the app runs outside of hangout-->
-    <script src="//hangoutsapi.talkgadget.google.com/talkgadget/apps/gadgets/js/rpc.js"></script>
-    <script src="//hangoutsapi.talkgadget.google.com/hangouts/api/hangout.js?v=1.0"></script>
-
-    <script type="text/javascript">
-        var _gaq = _gaq || [];
-        _gaq.push(["_setAccount", "UA-22511346-2"]);
-        _gaq.push(["_trackPageview"]);
-
-        (function () {
-            var ga = document.createElement("script");
-            ga.type = "text/javascript";
-            ga.async = true;
-            ga.src = ("https:" == document.location.protocol ? "https://ssl" : "http://www") + ".google-analytics.com/ga.js";
-            var s = document.getElementsByTagName("script")[0];
-            s.parentNode.insertBefore(ga, s);
-        })();
-    </script>
 
     <!-- build:js scripts/scripts.js -->
     <script data-main="scripts/config" src="bower_components/requirejs/require.js"></script>
