--- a/app/index.html
+++ b/app/index.html
@@ -10,10 +10,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width">
 
-    <!-- build:css css/main.css -->
-    <link rel="stylesheet" href="bower_components/visquick/assets/css/vq.css">
+    <!-- build:css css/vendor.css -->
     <link rel="stylesheet" href="bower_components/jquery-ui/themes/smoothness/jquery.ui.theme.css">
-    <link rel="stylesheet" href="bower_components/bootstrap/css/bootstrap.css">
+    <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="bower_components/visquick/assets/css/vq.css">
+    <!-- endbuild -->
+    <!-- build:css css/main.css -->
     <link rel="stylesheet" href="css/app.css">
     <!-- endbuild -->
 
