Fixed data modal display logic. Resolves #1

--- a/app/index.html
+++ b/app/index.html
@@ -29,6 +29,8 @@
         <div class="container-fluid outer-container" id="mainDiv"></div>
     </div>
 
+    <div id="modal-container" class="modal hide fade" visibility="hidden"></div>
+
     <!-- build:js scripts/scripts.js -->
     <script data-main="scripts/config" src="bower_components/requirejs/require.js"></script>
     <!-- endbuild -->
