--- a/app/index.html
+++ b/app/index.html
@@ -5,16 +5,17 @@
 <!--[if gt IE 8]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
 <head>
     <title>Cancer Regulome</title>
-    <link rel="shortcut icon" href="images/isbfavicon.ico" type="image/x-icon"/>
+    <link rel="shortcut icon" href="img/isbfavicon.ico" type="image/x-icon"/>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width">
 
     <!-- build:css css/vendor.css -->
     <link rel="stylesheet" href="bower_components/jquery-ui/themes/smoothness/jquery.ui.theme.css">
-    <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="bower_components/bootstrap/css/bootstrap.css">
     <link rel="stylesheet" href="bower_components/visquick/assets/css/vq.css">
     <!-- endbuild -->
+
     <!-- build:css css/main.css -->
     <link rel="stylesheet" href="css/app.css">
     <!-- endbuild -->
